--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
 
+# Ignore Gradle project-specific cache directory
+.gradle
+
+
+# Ignore Gradle build output directory
+build
+*.class
+app/chromedriver.log
+app/bin
+app/screenshots
+
+assesment
+
+app/tmp
+HELP.md
+.gradle
+/build/
+*/build/
+/bin/
+*/bin/
+!gradle/wrapper/gradle-wrapper.jar
+*.log
+*.gz
+*.class
+assesmentResults.json
+run_assessment.sh
+run_plarform_assessment.sh
+
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+/out/
+*/out/
+out/
+
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+
+### VS Code ### 
+.vscode/
+
